--- a/src/app/medic/medic.component.css
+++ b/src/app/medic/medic.component.css
@@ -27,10 +27,11 @@
 
 .btn {
     border-radius: 25px;
+    text-align: center;
 }
 
 .btn--price {
-    background-color: rgb(165, 165, 165);
+    background-color: rgb(169, 176, 180);
     padding: 8px;
     color: #fff;
 }
@@ -42,7 +43,14 @@
     transition: 0.2s;
 }
 
-.btn--add:hover {
+.btn--remove {
+    background-color: rgb(217, 226, 233);
+    color: #fff;
+    padding: 8px;
+    transition: 0.2s;
+}
+
+.btn--react:hover {
     cursor: pointer;
     box-shadow: inset 0 50px rgba(0, 0, 0, 0.2);
 }
