--- a/src/app/medic/medic.component.html
+++ b/src/app/medic/medic.component.html
@@ -7,6 +7,7 @@
     </div>
     <div class="medic-box__buttons">
         <div class="btn btn--price">{{ medic.prix }} €</div>
-        <div class="btn btn--add"><i class="fas fa-cart-plus"></i> Ajouter au panier</div>
+        <div *ngIf="!clicked" class="btn btn--react btn--add" (click)="action()"><i class="fas fa-cart-plus"></i> Ajouter au panier</div>
+        <div *ngIf="clicked" class="btn btn--react btn--remove" (click)="action()"><i class="fas fa-times-circle"></i> Enlever du panier</div>
     </div>
 </div>
