Shop, panier, validation commande - Part 2/2

--- a/src/app/panier/panier.component.html
+++ b/src/app/panier/panier.component.html
@@ -35,4 +35,12 @@
             Confirmer la commande
         </div>
     </div>
+
+    <div *ngIf="showLoadingPage" class="loading-screen">
+        <div *ngIf="!loadingComplete" class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
+        <div *ngIf="loadingComplete" class="loading-screen__validation">
+            <div><b>Commande validée ! ✅</b></div>
+            <div class="btn" (click)="resetShop()">Retour</div>
+        </div>
+    </div>
 </div>
