--- a/src/app/topbar/topbar.component.html
+++ b/src/app/topbar/topbar.component.html
@@ -1,11 +1,11 @@
 <div class="topbar">
     <div class="topbar__left">
-        <div class="topbar__element topbar__element--link">Nivantis</div>
+        <div class="topbar__element topbar__element--link">[Nom pharmacie]</div>
     </div>
     <div class="topbar__center">
-        <div class="topbar__element topbar__element--title">'Localisation'</div>
+        <div class="topbar__element topbar__element--title"></div>
     </div>
     <div class="topbar__right">
-        <div class="topbar__element topbar__element--link">Profil</div>
+        <div class="topbar__element topbar__element--link">Nivantis</div>
     </div>
 </div>
