--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,17 @@
-<p>login works!</p>
+<p>login</p>
+<div class="container">
+    <div class="form">
+        <div *ngIf="error">
+            {{ error }}
+        </div>
+        <div>
+            <input [(ngModel)]="user.name" type="text" placeholder="Nom d'utilisateur" required>
+        </div> 
+        <div>
+            <input [(ngModel)]="user.password" type="password" placeholder="Mot de passe" required>
+        </div>
+        <div>
+            <input (click)="validateForm()" type="submit" value="Valider">
+        </div>        
+    </div>
+</div>
