--- a/src/app/topbar/topbar.component.html
+++ b/src/app/topbar/topbar.component.html
@@ -6,6 +6,6 @@
         <div class="topbar__element topbar__element--title"></div>
     </div>
     <div class="topbar__right">
-        <div class="topbar__element topbar__element--link">Nivantis</div>
+        <div [routerLink]="'/profil'" class="topbar__element topbar__element--link">Profil</div>
     </div>
 </div>
