--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,10 +1,65 @@
 .container {
     margin: auto;
-    width: 80%;
+    width: 100%;
+}
+
+.m-t { margin-top: 50px }
+
+.top {
+    background-color: var(--theme-green);
+    padding: 20px;
+    color: white;
+    text-align: center;
+    font-weight: bold;
+}
+
+.alert-box {
+    width: 30%;
+    margin: auto;
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+.alert-box div {
+    padding: 10px;
+    background-color: rgb(255, 146, 146);
+    border-radius: 10px;
+    color: white;
 }
 
 .form {
+    width: 30%;
+    margin: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    box-shadow: 0 5px 8px rgb(221, 221, 221);
+    overflow: hidden;
+    border-radius: 10px;
+}
+
+.form__body {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    justify-content: center;
+}
+
+.input-form {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+.input-text {
+    padding: 8px;
+}
+
+.input-btn {
+    width: 50%;
+}
+
+@media (max-width: 600px) {
+    .form { width: 90% }
+    .alert-box { width: 90% }
 }
