--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,4 +5,9 @@
     </div>
 </div>
 <div style="height: 100px;"></div>
+<div class="float-btn" #FloatBtn>
+    <button mat-fab color="primary" aria-label="Example icon button with a delete icon">
+        <i class="fas fa-calculator fa-2x"></i>
+    </button>
+</div>
 <app-panier [panier]="medicsPanier" [quantityPanier]="quantityPanier"></app-panier>
