--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,11 @@
 <app-topbar></app-topbar>
-<div class="container container--flex">
+<div *ngIf="medics" class="container container--flex">
     <div class="container__elem" *ngFor="let medic of medics">
         <app-medic [medic]="medic" (actionPanier)="actionOnPanier($event)"></app-medic>
     </div>
+</div>
+<div *ngIf="!medics" class="container container--flex">
+    <div class="lds-ellipsis lds-ellipsis-dark"><div></div><div></div><div></div><div></div></div>
 </div>
 <div style="height: 100px;"></div>
 <div class="float-btn" #FloatBtn>
