--- a/src/app/officine/officine.component.css
+++ b/src/app/officine/officine.component.css
@@ -3,6 +3,10 @@
     margin: auto;
 }
 
+.mt {
+    margin-top: 30px;
+}
+
 @media (max-width: 600px) {
-    .sub-container { width: 90% }
+    .profil { width: 90% }
 }
