--- a/src/app/profil/profil.component.html
+++ b/src/app/profil/profil.component.html
@@ -1,6 +1,7 @@
+<app-topbar></app-topbar>
 <div class="container">
-    <div class="profil">
-        <div class="profil__body">
+    <div class="sub-container">
+        <div class="sub-container__body">
             <div class="alt"><span class="discret"> Nom d'utilisateur</span> {{ userData.username }}</div>
             <div><span class="discret"> E-mail</span> {{ userData.email }}</div>
             <div class="alt"><span class="discret"> Date d'inscription</span> {{ userData.created_at | date:'dd/MM/yyyy' }}</div>
