--- a/src/app/officine/officine.component.html
+++ b/src/app/officine/officine.component.html
@@ -41,16 +41,16 @@
         </div>   
         <table style="width: 100%" mat-table [dataSource]="orders" class="mat-elevation-z8">
             <ng-container matColumnDef="created_at">
-                <th mat-header-cell *matHeaderCellDef> Date commande </th>
-                <td mat-cell *matCellDef="let element"> {{element.created_at | date:'dd/MM/yyyy HH:mm' }} </td>
+                <th class="txt-sm" mat-header-cell *matHeaderCellDef> Date commande </th>
+                <td class="txt-sm" mat-cell *matCellDef="let element"> {{element.created_at | date:'dd/MM/yyyy HH:mm' }} </td>
             </ng-container>
             <ng-container matColumnDef="amount">
-                <th mat-header-cell *matHeaderCellDef> Quantité </th>
-                <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
+                <th class="txt-sm" mat-header-cell *matHeaderCellDef> Quantité </th>
+                <td class="txt-sm" mat-cell *matCellDef="let element"> {{element.amount}} </td>
             </ng-container>
             <ng-container matColumnDef="medic">
-                <th mat-header-cell *matHeaderCellDef> Médicament </th>
-                <td mat-cell *matCellDef="let element"> {{element.medic.name}} </td>
+                <th class="txt-sm" mat-header-cell *matHeaderCellDef> Médicament </th>
+                <td class="txt-sm" mat-cell *matCellDef="let element"> {{element.medic.name}} </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns2"></tr>
