--- a/src/app/officine-change/officine-change.component.css
+++ b/src/app/officine-change/officine-change.component.css
@@ -1,3 +1,20 @@
 .p3 {
     padding: 0 15px 15px 15px;
 }
+
+.mt {
+    margin-top: 20px;
+}
+
+.map-box {
+    margin-top: 5px;
+    background-color: rgb(240, 240, 240);
+    border-radius: 15px;
+    width: 100%;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+
